# anylist_cli

./: Cargo.toml  README.md  readme.md  t1.json
src/: auth.rs  error.rs  main.rs
src/commands/: categories.rs  items.rs  list.rs  login.rs  meal_plans.rs  mod.rs  recipes.rs  stores.rs  tail.rs
