[package]
name = "anylist_cli"
version = "0.1.0"
edition = "2024"
authors = ["Phil Denhoff <phil@denhoff.ca>"]

[[bin]]
name = "anylist"
path = "src/main.rs"

[dependencies]
anylist_rs = { path = "../anylist_rs" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
inquire = "0.6.2"
serde_json = "1.0.108"
dirs = "5.0.1"
anyhow = "1.0"
thiserror = "1.0"
